--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Next.js Cookie Authentication App",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "build": "next build",
+    "heroku-postbuild": "next build"
   },
   "keywords": [],
   "author": "",
